fix: change pagination visibility logic

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -21,6 +21,7 @@
     flex-grow: 1;
     width: 100%;
     height: 100%;
+    padding: 50px;
 
     :first-child {
         display: flex;
@@ -36,6 +37,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    padding: 50px;
     @include title-text;
     font-size: 40px;
     color: $aqua;
