--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
   min-width: 50px;
   height: 40px;
   padding: 8px;
@@ -11,6 +12,7 @@
   border-radius: 10px;
   @include text;
   font-size: 18px;
+  white-space: nowrap;
   background-color: $aqua-focus;
   transition: box-shadow 0.2s ease, margin-bottom 0.2s ease;
 
