--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -3,11 +3,3 @@
   align-items: center;
   gap: 16px;
 }
-
-@media (max-width: 550px) {
-  .form {
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-}
