--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,25 +23,14 @@
   display: flex;
   align-items: center;
   gap: 16px;
+  height: 100px;
 }
 
 @media (max-width: 900px) {
   .header {
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: 10px;
     min-height: 137px;
-  }
-}
-
-@media (max-width: 550px) {
-  .header {
-    min-height: 249px;
-  }
-
-  .header__right-bar {
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
   }
 }
