--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -3,7 +3,7 @@
 .input {
   display: flex;
   align-items: center;
-  width: 300px;
+  width: 100%;
   height: 40px;
   padding: 4px;
   border: 3px solid $aqua;
